test/errors/decimal_mixed_float_fail.hy
float ratio = 2.5
decimal one = 1
decimal value = one + ratio
